# badger2040-partial-refresh

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
