[package]
name = "badger2040-partial-refresh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.1"

defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

pimoroni_badger2040 = "0.2.0"
uc8151 = "0.1.4"
nb = "1.0.0"
embedded-graphics = "0.7.1"
embedded-text = "0.5.0"
tinybmp = "0.4.0"
bit_field = "0.10.1"
micromath = "2.0.0"
fugit = "0.3.6"